Fix form in place on mobile screens

--- a/app/utils/formstyle.css
+++ b/app/utils/formstyle.css
@@ -21,6 +21,7 @@ input {
   padding: 5px 10px;
   border-bottom: 1px solid #d1d1d146;
   font-family: "Noto Sans", sans-serif;
+  border-radius: unset;
 }
 
 textarea {
@@ -28,6 +29,7 @@ textarea {
   padding: 5px 10px;
   border-bottom: 0px;
   font-family: "Noto Sans", sans-serif;
+  resize: none;
 }
 
 textarea {
@@ -83,5 +85,8 @@ textarea {
 @media screen and (max-width: 600px) {
   body {
     font-size: 80%;
+  }
+  .form-overlay {
+    position: fixed;
   }
 }
